tests/ui/lex_regex_not_match_is_prefix.rs
use teleparse::prelude::*;
#[derive_lexicon]
pub enum MyToken {
    #[teleparse(regex(r#"key"#), terminal(Key, Keyboard = "keyboard"))]
    DoesNotMatchTerminal, 
}

fn main() {}
